# VisualizadorProcesador

./: .gitignore  CMakeLists(conan1).txt  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  main.c  main.cpp  process.h
animation_folder/: batman.js  fifo.html  fifo.js  roundrobin.html  sjf.html  sjf.js  styles.css
frontend/: visualizer.html
frontend/css/: styles.css
frontend/js/: batman.js  fifo.js  sjf.js
inc/: process.hpp  process_utils.hpp
src/: main.cpp  process_utils.cpp
